corrected z-index

--- a/styles.css
+++ b/styles.css
@@ -49,7 +49,7 @@ h1 {
 nav {
     position: sticky;
     top: 0;
-    z-index: 1000;
+    z-index: 2;
     display: flex;
     justify-content: center;
     background-color: black;
@@ -253,7 +253,7 @@ button:hover {
     background-image: url(./assets/cave-canem.webp);
     background-size: contain;
     background-position: center;
-    background-blend-mode: darken;
+    background-blend-mode:darken;
     view-timeline-name: --shape;
     view-timeline-axis: block;
     animation-timeline: --shape;
